# FMI-OOP-Semester-Proj

./: .gitignore  CMakeLists.txt  README.md  conandata.yml  main.cpp
Character/: Character.cpp  Character.hpp  CharacterClass.hpp  CharacterRace.hpp
Item/: Item.cpp  Item.hpp
Map/: Map.cpp  Map.hpp
Monster/: Monster.cpp  Monster.hpp
character/: Character.cpp  Character.hpp  CharacterClass.hpp  CharacterRace.hpp
data/items/: items1.json  items2.json  items3.json  items4.json
data/levels/: level1.json  level2.json  level3.json  level4.json
data/monsters/: monsters.json  monsters1.json  monsters2.json  monsters3.json  monsters4.json
editor/: CMakeLists.txt  main.cpp
editor/GameEditor/: GameEditor.hpp
editor/Maze/: CellState.hpp  Maze.cpp  Maze.hpp
editor/MazeGenerator/: MazeGenerator.cpp  MazeGenerator.hpp
editor/src/: main.cpp
editor/src/GameEditor/: GameEditor.cpp  GameEditor.hpp
editor/src/Maze/: Maze.hpp
game/: CMakeLists.txt
game/src/: main.cpp
game/src/Game/: GameAction.hpp  GameManager.cpp  GameManager.hpp
game/src/Game/CharacterCreator/: CharacterCreator.hpp
game/src/Game/Combat/: CombatManager.cpp
game/src/Game/Controls/: ControlsManager.hpp
game/src/Game/Interactions/: InteractionsManager.cpp
game/src/Game/Save/: SaveManager.cpp  SaveManager.hpp
game/src/Hero/: Hero.cpp  Hero.hpp  HeroFactory.cpp  HeroFactory.hpp
game/src/Hero/Class/: HeroClass.cpp  HeroClass.hpp
game/src/Hero/Race/: HeroRace.cpp
game/src/Map/: LoadedLevel.hpp  MapFactory.cpp  MapFactory.hpp
game/src/Map/Cell/: Cell.cpp  Cell.hpp
game/src/Map/LevelLoader/: LevelLoader.cpp  LevelLoader.hpp
game/src/NPEntity/Item/: ItemFactory.hpp
game/src/NPEntity/Monster/: Monster.cpp  Monster.hpp  MonsterFactory.hpp
game/src/NPEntity/Wall/: Wall.cpp
game/src/Stats/: Stats.hpp
game_map/: GameMap.cpp  GameMap.hpp  MoveDirection.hpp
item/: Item.cpp  Item.hpp
monster/: Monster.cpp  Monster.hpp
resources/level_maps/: level1.json
src/: main.cpp
src/Entity/: NPEntity.cpp  NPEntity.hpp
src/Entity/Creature/: Creature.cpp  Creature.hpp  Stats.hpp
src/Entity/Creature/Hero/: Hero.cpp  Hero.hpp  HeroFactory.cpp  HeroFactory.hpp
src/Entity/Creature/Hero/Class/: HeroClass.hpp
src/Entity/Creature/Hero/Race/: HeroRace.hpp
src/Entity/Creature/Monster/: Monster.cpp  Monster.hpp  MonsterFactory.cpp  MonsterFactory.hpp
src/Entity/Item/: Item.cpp  Item.hpp  ItemFactory.cpp  ItemFactory.hpp  ItemType.cpp  ItemType.hpp
src/Entity/Wall/: Wall.cpp  Wall.hpp
src/Game/: GameAction.hpp  GameContext.hpp  GameManager.cpp  GameManager.hpp
src/Game/CharacterCreator/: CharacterCreator.cpp  CharacterCreator.hpp
src/Game/Combat/: AttackType.hpp  CoinToss.cpp  CoinToss.hpp  CombatManager.cpp  CombatManager.hpp
src/Game/Controls/: ControlsManager.cpp  ControlsManager.hpp
src/Game/Interactions/: InteractionsManager.cpp  InteractionsManager.hpp
src/Game/Save/: SaveManager.cpp  SaveManager.hpp
src/Hero/: Hero.cpp  Hero.hpp  HeroFactory.cpp
src/Hero/Race/: HeroRace.hpp
src/Map/: Map.cpp  Map.hpp  MapFactory.cpp  MapFactory.hpp
src/Map/Cell/: Cell.cpp  Cell.hpp
src/Map/LevelLoader/: LevelLoader.cpp  LevelLoader.hpp  LoadedLevel.hpp
src/NPEntity/: NPEntity.cpp
src/NPEntity/Item/: Item.cpp  Item.hpp  ItemFactory.cpp  ItemFactory.hpp  ItemType.hpp
src/NPEntity/Monster/: Monster.cpp  Monster.hpp  MonsterFactory.cpp
src/Stats/: Stats.cpp
src/Util/: Util.cpp  Util.hpp
tests/: CMakeLists.txt
tests/editor/: MazeGeneratorTest.cpp  MazeTest.cpp
tests/game/: HeroTest.cpp
